static/css/base.css
/*------------------------------------ General*/

html, body {
    height: 100%;
}

body {
    font-family: 'Open Sans', sans-serif;
    color: #1C1C1C;
    background-color: white;
}

h1, h2, .lead-home {
    color: #2B5357;
}

.section-title,
.page-title,
.product-page-title,
.workshops-page-title,
.summary-title {
    letter-spacing: 2px;
    text-transform: capitalize;
}

.page-title {
    border-bottom: 0.01rem solid #D1A9AF;
}

.summary-title {
    font-size: 1.1rem;
    font-weight: bolder;
    margin-bottom: 1.5rem;
}

.teal-text {
    color: #2B5357;
}

.dusty-pink-text {
    color: #D1A9AF;
}

.border-teal {
    border: 1px solid #2B5357;
}

/* remove link decoration and set colour to inherit */
a,
a:hover,
a:active,
a:focus {
    text-decoration: none;
    color: inherit;
}

/*------------------------------------ Buttons*/

/* remove Bootstrap outline */
.btn:hover,
.btn:focus,
.btn:active {
    outline: none !important;
    box-shadow: none;
}

.callout-btn, 
.action-btn,
.btn-qty {
    background-color: #2B5357;
    color: white;
    letter-spacing: 2px;
}

.callout-btn:hover,
.callout-btn:active,
.callout-btn:focus {
    font-size: 1.3rem;
    color: white;
}

.btn-qty {
    border: 0.01rem solid #2B5357;
}

.btn-qty:hover,
.btn-qty:active,
.btn-qty:focus {
    background-color: white;
    color: #2B5357;
}

.action-btn:hover,
.action-btn:active,
.action-btn:focus {
    font-size: 1.1rem;
    color: white;
}

.btn-inverted {
    background-color: white;
    color: #2B5357;
    border: 0.1rem solid #2B5357;
    letter-spacing: 2px;
 }
 
 .btn-inverted:hover,
 .btn-inverted:active,
 .btn-inverted:focus {
     font-size: 1.1rem;
     color: #2B5357;
 }

/*------------------------------------ Home*/
.hero-img {
    background-image: url(../site-images/background-image.jpg);
    height: 95vh;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

/*------------------------------------ Navigation*/
.nav-background {
    background-color:#2B5357;
}

.logo-icon {
    color: #D1A9AF !important;
}

.logo {
    font-size: 2.2rem;
    font-weight: bolder;
    letter-spacing: 2px;
    color: white !important;
}

.main-nav-link {
    font-size: 1.5rem;
    color: white !important;
}

.dropdown-menu {
   left: -100px; 
}

.logged-in {
    font-weight: bolder;
    color: white;
    letter-spacing: 2px;
}

#custom-order-banner {
    background-color: #D1A9AF;
    color: #1C1C1C;
    font-style: italic;
    font-weight: bolder;
}

.contact-link,
.current, 
.admin-link {
    text-decoration: underline !important;
}

/*------------------------------------ Footer*/

.page-footer {
    position: sticky;
    top: 100vh;
}

.footer-text,
.footer-link {
    color: white;
    font-size: 0.9rem;
}

.footer-link:hover,
.footer-link:active,
.footer-link:focus {
    font-size: 1.1rem;
}

.footer-icon {
    font-size: 1.2rem;
}

.footer-icon:hover,
.footer-icon:active,
.footer-icon:focus {
    font-size: 1.6rem;
}

.footer-heading {
    font-weight: bolder;
    letter-spacing: 2px;
}

/* Back to top button */

.back-to-top {
    position: fixed;
    bottom: 30px;
    right: 20px;
    z-index: 999999999;
    background-color: #D1A9AF;

}

.top-icon {
    font-size: 2rem;
    color: #2B5357;
    font-weight: bold;
}

/*------------------------------------ Home page sections*/

.icn-home {
    font-size: 2rem;
    color: #D1A9AF;
    font-weight: bolder;
}

.text-highlight {
    color: #2B5357;
    font-weight: bolder;
}

.in-press {
    color: #2B5357;
    text-transform: uppercase;
    font-size: 1.2rem;
}

.in-press:hover,
.in-press:active,
.in-press:focus {
    color: #2B5357;
    font-size: 1.5rem;
}

.image-size {
    width: 200px;
    height: 50px;
}

/*------------------------------------ Product page*/

.category-link,
.back-link {
    color: #2B5357;
    text-transform: uppercase;
    font-weight: bolder;
    font-size: 0.8rem;
}

.category-link:hover,
.category-link:active,
.category-link:focus,
.back-link:hover,
.back-link:active,
.back-link:focus  {
    color: #2B5357;
    font-size: 1rem;
}

.price-tag {
    font-weight: bolder;
    letter-spacing: 2px;
}

.divider {
    width: 90%;
    border-top: 0.1rem solid #D1A9AF;
}

.product-title,
.product-title-detail {
    text-transform: capitalize;
    letter-spacing: 2px;
    color: #2B5357;
}

.category-badge {
    background-color: #2B5357;
    color: white;
    font-size: 1.1rem;
    font-weight: lighter;
    padding: .7rem;
}

.search-form {
    border-color: #D1A9AF;
}

input[name='q']::placeholder {
    color: #aab7c4;
}

/*------------------------------------ Basket page*/

.update-link {
    cursor: pointer;
    border-bottom: 0.1rem solid #D1A9AF;
}

.update-link:hover,
.update-link:active,
.update-link:focus {
    font-size: 1.1rem;
    cursor: pointer;
}

.remove-icon > i {
    color: #2B5357;
    font-size: 1.4rem;
}

.remove-icon:hover > i,
.remove-icon:active > i,
.remove-icon:focus > i {
    font-size: 1.6rem;
    color: #2B5357;
} 

/*------------------------------------ Toasts*/

/* message container positioned top right */
.message-container {
    z-index: 999999999;
    position: fixed;
    top: 72px;
    right: 15px;
}

.custom-toast {
    overflow: visible;
}

/* toast border */
.toast-capper {
    height: 2px;
}

/* free delivery countdown background */
.bg-basket {
    background-color: #D1A9AF;
}

/* wrapper to restrict basket preview from getting too large */
.basket-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/*------------------------------------ Allauth*/

.allauth-form-inner-content p {
    margin-top: 1rem;
}

.allauth-form-inner-content input {
    border: 1px solid #2B5357;
    box-shadow: 0px 0px 0px 0.5px rgba(43, 83, 89, 0.1),
    0px 2px 5px 0px rgba(43, 83, 89, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
}

.allauth-form-inner-content input:focus,
.allauth-form-inner-content input:active {
    box-shadow: 0 1px 3px 0 #2B5357;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

/*------------------------------------ Product management*/

/* file upload button, Credit: Code Institute */
.btn-file {
    position: relative;
    overflow: hidden;
}

/* input */
.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

/* remove border radius of checkbox, add color */
.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}


/*------------------------------------ Mailchimp newsletter */

#mc_embed_signup {
  background: #2B5357;

}

.newsletter-btn {
    background: #D1A9AF !important;
    color: #1C1C1C !important;
    font-weight: bolder !important;
    letter-spacing: 2px;
}

.newsletter-btn:hover,
.newsletter-btn:focus,
.newsletter-btn:active {
    background: #D1A9AF !important;
    color: #1C1C1C !important;
    font-weight: bolder !important;
    font-size: 1rem !important;
}

.mce_inline_error {
    background: white !important;
    color: #1C1C1C !important;
}

#mce-success-response {
    color: white !important;
    padding: 0 !important;
    font-size: .9rem;
    font-weight: normal !important;
}


/*------------------------------------ Media queries*/

/*on screens 1600px or smaller, reduce the font size and padding of qty selector*/

@media screen and (max-width: 1600px) {
    .input-group {
        font-size: .5rem;
    }
    
    .btn-qty,
    .qty_input {
        padding: .2rem;
        font-size: .8rem;
    }
}

/*on screens 425px or smaller, reduce the font size, padding and margin*/
@media screen and (max-width: 425px) {

    .logo {
        font-size: 1.8rem;
        margin-bottom: .5rem;
    }

    .main-nav-link {
        font-size: 1.3rem;
        padding: .3rem;
    }

    .navbar-toggler {
        font-size: 1rem;
    }

    #custom-order-banner p {
        font-size: .8rem;
    }

    .hero-img h1 {
        font-size: 1.4rem;
    }

    .hero-img p {
        font-size: 1rem;
    }

    .callout-btn {
        padding:.2rem .4rem;
        font-size: 1rem;
    }

    .section-title {
        font-size: 1.4rem;
        padding: 1.2rem 0 1rem 0;
    }

    .container {
        padding-left: 1.4rem;
        padding-right: 1.4rem;
    }

    #mce-success-response {
        font-size: .6rem;
    }

    .page-footer {
        padding-top: .2rem;
    }

    .footer-text {
        font-size: .5rem;
    }

    .top-icon {
        font-size: 1.5rem;
    }

    .page-title,
    .product-page-title,
    .workshops-page-title {
        font-size: 2rem;
        margin-top: 1.5rem;
    }

    .category-badge  {
        padding: 0.5rem;
        font-size: 1rem;
    }

    .action-btn,
    .btn-inverted {
        padding: .2rem .4rem;
        font-size: .8rem;
    }

    .qty-section-title {
        margin-bottom: 0;
    }

    .workshop-text {
        font-size: .8rem;
        padding: 0;
    }

    .workshop-text-login {
        font-size: .7rem;
    }


    .product-title-detail {
        font-size: 1.3rem;
        padding-top: 1rem;
    }

    .testimonials {
        padding-top: 0;
    }

}

/*on screens 365px or smaller, reduce the font size and padding*/

@media screen and (max-width: 365px) {

    .section-title {
        font-size: 1.1rem;
    }

    .btn-qty {
        padding: .1rem;
        font-size: .6rem;
    }

    .icn-workshop {
        padding-right: .4rem !important;
    }

    .workshop-text-fav {
        font-size: .8rem;
    }
}

/*on screens 290px or smaller, reduce the font size*/

@media screen and (max-width: 290px) {

    .section-title {
        font-size: 1rem;
    }

    .table th,
    .table td {
        font-size: .6rem;
    }

    .action-btn,
    .btn-inverted {
        font-size: .7rem;
    }

    .checkout-text {
        font-size: .8rem;
    }

}

